# rospace-planning

./: .gitignore  .gitlab-ci.yml  README.md
cfg/: initial_conditions.yaml  scenario.yaml  scenario_CSO.yaml  scenario_camille.yaml  scenario_template.yaml
example/: scenario.pickle
path_planner/: CMakeLists.txt  package.xml
path_planner/cfg/: initial_conditions.yaml  scenario.yaml  scenario_barbee.yaml  scenario_camille.yaml  scenario_camille_closing.yaml  scenario_camille_final_approach.yaml  scenario_camille_homing.yaml  scenario_camille_homing_rw.yaml  scenario_camille_phasing.yaml  scenario_camille_phasing_rw.yaml  scenario_camille_rw.yaml  scenario_davide.yaml  scenario_sample_absolute.yaml  scenario_sample_relative.yaml  scenario_template.yaml
path_planner/example/: scenario.pickle
path_planner/scenario/: sample_scenarios.py
path_planner/src/: checkpoint.py  manoeuvre.py  offline_path_planner.py  orbit_adjuster.py  path_planner_node.py  path_planning_propagator.py  scenario.py  screw_man.py  solver.py  solver_test.py  state.py  trajectory_plotter.py
path_planner/test/: test_orbadj.py  test_output.py
src/: CW_dV_error.py  CW_error_analysis.py  J2_linear.py  J2_solver.py  checkpoint.py  hold_points.py  logger.py  manoeuvre.py  offline_path_planner.py  old_drift_algorithm.py  old_solvers.py  optimal_transfer_time.py  orbit_adjuster.py  path_optimizer.py  path_optimizer_v2.py  path_planner_node.py  path_planner_node_v2.py  propagator_class.py  relative_RDV_error_survey.py  scenario.py  scenario_v2.0.py  scenario_v2.py  solver.py  solver_debug.py  state.py  (+7 more)
(+14 files in other folders)
