<?xml version="1.0"?>
<package format="2">
  <name>cso_path_planner</name>
  <version>0.0.0</version>
  <description>Node that contains the path planning algorithm</description>

  <maintainer email="freyda@student.ethz.ch">Davide Frey</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <depend>rospy</depend>
  <depend>roscpp</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>space_msgs</depend>

</package>
