<?xml version="1.0"?>
<package format="2">
  <name>cso_path_planner</name>
  <version>0.0.0</version>
  <description>Repository that contains the path planning algorithm</description>

  <maintainer email="freyda@student.ethz.ch">Davide Frey</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>rospy</depend>

  <depend>std_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>rospace_lib</depend>
  <depend>rospace_msgs</depend>

</package>
